<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="serverViewModel"
            type="assignment.tesonet.homework.ui.viewmodel.ServerActivityViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="assignment.tesonet.homework.ui.ServerListActivity">

        <android.support.v7.widget.RecyclerView
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/serverRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view5" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

        </View>

        <TextView
            android:textAllCaps="true"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/server"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <TextView
            android:textAllCaps="true"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/distance"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/scrim"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/scrim"
            android:rotation="180"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintTop_toTopOf="@+id/view4"
            app:srcCompat="@drawable/ic_logo_2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:onClick="logout"
            android:id="@+id/imageView7"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/view4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view4"
            app:srcCompat="@drawable/ico_logout"
            tools:ignore="ContentDescription" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/backgroundImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg" />

        <ProgressBar
            android:indeterminateDrawable="@drawable/circular_progress_bar"
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/infoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/fetching_the_list"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar" />

    </android.support.constraint.ConstraintLayout>

</layout>